# pmo-agent

./: .gitignore  CLAUDE.md  GETTING_STARTED.md  PMO_SUMMARY.txt  README.md  README_DOCUMENTATION.md  pmo-summary.html
agents/gross-opportunity-agent/: .dockerignore  .env.template  .gcloudignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  agent-spec.yaml  governance-rules.yaml  memory-schema.json  prompt.md  pyproject.toml  requirements.txt  workflow.py
agents/gross-opportunity-agent/config/: engines.json
agents/gross-opportunity-agent/config/sources/: _template.json  emailed_bid_leads.json  sam_gov.json
agents/gross-opportunity-agent/docs/: SPEC-REQUESTS-2026-07-08.md
agents/gross-opportunity-agent/goa/: __init__.py  agents_meta.py  orchestrator.py
agents/gross-opportunity-agent/goa/adapters/: __init__.py  alert_email_adapter.py  base.py  file_drop_adapter.py  inbound_push_adapter.py  rest_adapter.py  sam_gov.py
agents/gross-opportunity-agent/goa/dedup/: __init__.py  embed.py  idempotency.py  keying.py  match.py  merge.py
agents/gross-opportunity-agent/goa/engine/: __init__.py  anthropic_engine.py  runner.py  vertex_engine.py
agents/gross-opportunity-agent/goa/events/: __init__.py  (+3 more)
agents/gross-opportunity-agent/jobs/: backfill.py  delta.py  expiration_sweep.py  register_source.py  seed.py
agents/gross-opportunity-agent/screen/: index.html
agents/gross-opportunity-agent/scripts/: build_ca_bundle.sh  email_leads_report.py  parse_bas5_inbox.py  run_backfill.sh  serve_local.sh
agents/gross-opportunity-agent/sql/: bigquery_ddl.sql  cloudsql_ddl.sql
(+532 files in other folders)
